# Reader

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.playwright-mcp/: page-2026-06-18T09-27-35-564Z.yml  page-2026-06-18T09-31-38-193Z.yml  page-2026-06-18T10-04-35-209Z.yml  page-2026-06-18T10-05-04-134Z.yml  page-2026-06-18T10-18-10-274Z.yml  page-2026-06-18T10-18-17-433Z.yml  page-2026-06-18T10-27-22-877Z.yml  page-2026-06-18T10-27-30-122Z.yml  page-2026-06-18T11-16-46-011Z.yml  page-2026-06-18T12-05-33-672Z.yml  page-2026-06-18T12-29-15-132Z.yml  page-2026-06-18T12-48-26-423Z.yml  page-2026-06-18T12-48-42-076Z.yml  page-2026-06-19T05-47-54-069Z.yml  page-2026-06-19T06-17-42-164Z.yml  page-2026-06-19T06-26-10-305Z.yml  page-2026-06-19T06-26-52-772Z.yml  page-2026-06-19T11-31-31-092Z.yml  page-2026-06-19T11-51-23-600Z.yml  page-2026-06-19T13-16-57-415Z.yml  page-2026-06-22T06-09-47-855Z.yml  page-2026-06-22T06-19-20-971Z.yml  page-2026-06-22T06-26-43-307Z.yml  page-2026-06-22T06-43-51-800Z.yml  page-2026-06-22T06-53-58-735Z.yml
release/: README.md  release.sh  version.json  version.mjs
src/: assets.d.ts  cloud.ts  codeview.ts  db.ts  desktop.ts  fonts.ts  gdrive.ts  main.ts  styles.css  sync.ts  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
