[package]
name = "Reader"
version = "0.1.0"
description = "Reader is a simple, lightweight, ePub and Mobi reader"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Name the executable "Reader" (sets the dock/process/CFBundleExecutable name).
[[bin]]
name = "Reader"
path = "src/main.rs"

# The old `objc` 0.2 macros reference `cfg(feature = "cargo-clippy")`; declare it
# expected so those warnings go away while the lint still catches real mistakes.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# macOS-only: NSWindow opacity + media-key (NSEvent) monitoring
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
block = "0.1"

# Desktop-only: OAuth loopback (open the browser, exchange the code).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
ureq = { version = "2", features = ["json"] }
open = "5"
urlencoding = "2"

